Implemented creating groups by subgroups